Update whole site to Kehilla

--- a/blog.html
+++ b/blog.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Blog - Business Casual - Start Bootstrap Theme</title>
+    <title>Blog - Kehilla Residential Programme</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -32,8 +32,8 @@
 
 <body>
 
-    <div class="brand">Business Casual</div>
-    <div class="address-bar">3481 Melrose Place | Beverly Hills, CA 90210 | 123.456.7890</div>
+    <div class="brand">Kehilla Residential Programme</div>
+    <div class="address-bar">262 Ridley Blvd. | Toronto, ON M5M 4N6 | 416.932.1212</div>
 
     <!-- Navigation -->
     <nav class="navbar navbar-default" role="navigation">
@@ -47,7 +47,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
-                <a class="navbar-brand" href="index.html">Business Casual</a>
+                <a class="navbar-brand" href="index.html">Kehilla Residential Programme</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -77,38 +77,62 @@
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center">Company
+                    <h2 class="intro-text text-center">Kehilla
                         <strong>blog</strong>
                     </h2>
                     <hr>
                 </div>
                 <div class="col-lg-12 text-center">
                     <img class="img-responsive img-border img-full" src="img/slide-1.jpg" alt="">
-                    <h2>Post Title
+                    <h2>Attention Sukkahville Registrants!
                         <br>
-                        <small>October 13, 2013</small>
+                        <small>Tuesday, 3 July 2012</small>
                     </h2>
-                    <p>Lid est laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats vitaes nemo minima rerums unsers sadips amets. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+                    <p>As the August 1st submission date approaches, we are looking forward to receiving all the amazing submissions for Sukkahville 2012.</p>
+                    <p>This year we have made special arrangements with ARC Canada, a Toronto based print shop, to print your submissions. ARC Canada is able to print your design on a 24” x 36” (ARCH D) poster mounted on foam core for $30 CDN with an additional $10 for shipping costs. At your regular print shop, you would be paying approximately $120 for this service.</p>
+                    <p>Please send an email to info@sukkahville.com if you are interested in using this service. We will then send your contact information to the printing company and they will set you up with an online account where you can submit your files and pay by credit card. Please make sure to upload a Word or PDF document which contains your name, contact information and the name of your design. The print company will put this document in an envelope and fasten it to the back of your board.</p>
+                    <p>Do not wait until the last minute to submit your design. The printer needs at least 48 hours to complete the work and there are over one hundred submissions that may need to be printed in the week leading up to the deadline. Get your work in to the printer as soon as possible to ensure that it is delivered to Kehilla Residential Programme by August 1st, 2012. You can still use another print service if you prefer, but this is a great deal which is hard to turn down!</p>
+                    <p>Best of Luck! <br>
+                    The Sukkahville Team</p>
                     <a href="#" class="btn btn-default btn-lg">Read More</a>
                     <hr>
                 </div>
                 <div class="col-lg-12 text-center">
                     <img class="img-responsive img-border img-full" src="img/slide-2.jpg" alt="">
-                    <h2>Post Title
+                    <h2>Sukkahville 2012 - Update
                         <br>
-                        <small>October 13, 2013</small>
+                        <small>Wednesday, 6 June 2012</small>
                     </h2>
-                    <p>Lid est laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats vitaes nemo minima rerums unsers sadips amets. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+                    <p>We currently have 146 people and teams registered for the Sukkahville 2012 Design Competition! The registrants are located all over the world – check out the map below to see exactly where they're from.</p>
+                    <p>We're really excited for these unique and creative submissions to start rolling in! After the submission deadline of August 1, 2012, five designs will be selected for construction at Mel Lastman Square.</p>
+                    <p>Please stay tuned for further updates!</p>
+                    <p>-The Sukkahville Team</p>
                     <a href="#" class="btn btn-default btn-lg">Read More</a>
                     <hr>
                 </div>
                 <div class="col-lg-12 text-center">
                     <img class="img-responsive img-border img-full" src="img/slide-3.jpg" alt="">
-                    <h2>Post Title
+                    <h2>Sukkahville 2011 - A Great Success!
                         <br>
-                        <small>October 13, 2013</small>
+                        <small>Saturday, 5 November 2011</small>
                     </h2>
-                    <p>Lid est laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats vitaes nemo minima rerums unsers sadips amets. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+                    <p>Tuesday October 11th, 2011 marked the first night of Kehilla Residential Programme’s inaugural Sukkahville!  The Sukkahville event was inspired by New York City’s innovative Sukkah City design competition held at Union Square back in 2010. The theme of the Toronto-based competition was to re-imagine the traditional idea of a sukkah with a contemporary sustainable design approach. Artists, architects and designers of all faiths were invited to submit their designs. Submissions were received from all over the world including, New York, Hong Kong, Mexico, Halifax and Toronto. Five sukkahs were then selected to be built for the community to experience.</p>
+                    <p>The reception brought out a fantastic crowd of all backgrounds to view and experience the top five entries and vote for their favourite sukkah. Most importantly this event helped celebrate Sukkot while bringing awareness to the need for more affordable housing in Toronto.</p>
+                    <p>A huge thank you to all those who participated in the event, and came out to show their support! Kehilla is already busy planning for Sukkahville 2012!</p>
+                    <p>For those who missed it, or who were unable to see the sukkahs in daylight, here are some photos of the built structures.</p>
+                    <div class='row text-center'>
+                        <div class="col-sm-12">
+                        <img class="" src="img/blog1.JPG" alt="">
+                        </div>
+                        <br>
+                        <div class="col-sm-12">
+                        <img class="" src="img/blog2.JPG" alt="">
+                        </div>
+                        <br>
+                        <div class="col-sm-12">
+                        <img class="" src="img/blog3.jpg" alt="">
+                        </div>
+                    </div>
                     <a href="#" class="btn btn-default btn-lg">Read More</a>
                     <hr>
                 </div>
@@ -130,7 +154,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <p>Copyright &copy; Your Website 2014</p>
+                    <p>Copyright &copy; Kehilla Residential Programme</p>
                 </div>
             </div>
         </div>
