--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 <body>
 
-    <div class="brand">Kheilla Residential Programme</div>
+    <div class="brand">Kehilla Residential Programme</div>
     <div class="address-bar">262 Ridley Blvd. | Toronto, ON M5M 4N6 | 416.932.1212</div>
 
     <!-- Navigation -->
