Full update to Kehilla

--- a/blog.html
+++ b/blog.html
@@ -83,7 +83,7 @@
                     <hr>
                 </div>
                 <div class="col-lg-12 text-center">
-                    <img class="img-responsive img-border img-full" src="img/slide-1.jpg" alt="">
+                    <img class="img-responsive img-border img-full" src="img/AVANEL1.jpg" alt="">
                     <h2>Attention Sukkahville Registrants!
                         <br>
                         <small>Tuesday, 3 July 2012</small>
@@ -98,7 +98,7 @@
                     <hr>
                 </div>
                 <div class="col-lg-12 text-center">
-                    <img class="img-responsive img-border img-full" src="img/slide-2.jpg" alt="">
+                    <img class="img-responsive img-border img-full" src="img/MARC7.jpg" alt="">
                     <h2>Sukkahville 2012 - Update
                         <br>
                         <small>Wednesday, 6 June 2012</small>
@@ -111,7 +111,7 @@
                     <hr>
                 </div>
                 <div class="col-lg-12 text-center">
-                    <img class="img-responsive img-border img-full" src="img/slide-3.jpg" alt="">
+                    <img class="img-responsive img-border img-full" src="img/MARC3.jpg" alt="">
                     <h2>Sukkahville 2011 - A Great Success!
                         <br>
                         <small>Saturday, 5 November 2011</small>
