--- a/index.html
+++ b/index.html
@@ -87,13 +87,13 @@
                         <!-- Wrapper for slides -->
                         <div class="carousel-inner">
                             <div class="item active">
-                                <img class="img-responsive img-full" src="img/slide-1.jpg" alt="">
+                                <img class="img-responsive img-full" src="img/AVANEL1.jpg" alt="">
                             </div>
                             <div class="item">
-                                <img class="img-responsive img-full" src="img/slide-2.jpg" alt="">
+                                <img class="img-responsive img-full" src="img/MARC3.jpg" alt="">
                             </div>
                             <div class="item">
-                                <img class="img-responsive img-full" src="img/slide-3.jpg" alt="">
+                                <img class="img-responsive img-full" src="img/MARC7.jpg" alt="">
                             </div>
                         </div>
 
@@ -127,7 +127,7 @@
                         <strong>Jewish Community</strong>
                     </h2>
                     <hr>
-                    <img class="img-responsive img-border img-left" src="img/intro-pic.jpg" alt="">
+                    <img class="img-responsive img-border img-left" src="img/house-hands.jpg" alt="">
                     <hr class="visible-xs">
                     <p>Kehilla Residential Programme identifies and champions affordable housing in the Greater Toronto area and implements housing initiatives for the Jewish community. The agency mandate is fulfilled through community capacity building, research and education, project sponsorship, and development consultation.</p>
                     <p>Kehilla is staffed by an Executive Director, an Executive Assistant, a Supervisor of Property Management, a Property Manager, an RGI Administrator and a  Bookkeeper. A 12-member volunteer Board of Directors oversees the operations of the agency. Kehilla is fortunate to have a highly skilled and talented Board of Directors with representation from many professional backgrounds including: law, accounting, property management professionals, developers, planning and architecture. There are separate Boards for Avenel and MARC.</p>
