--- a/blog.html
+++ b/blog.html
@@ -155,6 +155,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <p>Copyright &copy; Kehilla Residential Programme</p>
+                    <img src="img/UJA-logo.jpg" class="img-responsive pull-right" alt=""> 
                 </div>
             </div>
         </div>
