--- a/index.html
+++ b/index.html
@@ -188,8 +188,10 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <p>Copyright &copy; Kehilla Residential Programme 2015</p>
+                      <img src="img/UJA-logo.jpg" class="img-responsive pull-right" alt=""> 
                 </div>
             </div>
+
         </div>
     </footer>
 
