--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 
     <div class="brand">Kehilla Residential Programme</div>
     <div class="address-bar">262 Ridley Blvd. | Toronto, ON M5M 4N6 | 416.932.1212</div>
+    <div class="text-center"> <img src = "img/rsz_KRP-Logo.png"> </div> <br> <br>
 
     <!-- Navigation -->
     <nav class="navbar navbar-default" role="navigation">
